# common/src/main/java/com/skiply/student/registration/common/model/StudentGrade.java
@@ -3,9 +3,22 @@ package com.skiply.student.registration.common.model;
 import java.util.Objects;
 
 public record StudentGrade(
-        Integer grade
+        Integer value
 ) {
     public StudentGrade {
-        Objects.requireNonNull(grade);
+        Objects.requireNonNull(value);
+    }
+
+    public static StudentGrade of(Integer grade) {
+        return new StudentGrade(grade);
+    }
+
+    public static StudentGrade fromString(String grade) {
+        return new StudentGrade(Integer.parseInt(grade));
+    }
+
+    @Override
+    public String toString() {
+        return value.toString();
     }
 }
